tests/lean/1057.lean.expected.out
1057.lean:9:4-9:15: error: Dependent elimination failed: Type mismatch when solving this alternative: it has type
  motive t Int
but is expected to have type
  motive t xâœ
